Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8776

fix weird inline definitions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • Lustre 2.9.0
    • 3
    • 9223372036854775807

      There are a number of functions defined inline or 'inline static'.

      lnet/klnds/gnilnd/gnilnd_cb.c-304-
      lnet/klnds/gnilnd/gnilnd_cb.c:305:inline __u16
      lnet/klnds/gnilnd/gnilnd_cb.c-306-kgnilnd_cksum_kiov(unsigned int nkiov, lnet_kiov_t *kiov,
      --
      lnet/klnds/gnilnd/gnilnd_cb.c-1658-/* lets us know if we can push this RDMA through now */
      lnet/klnds/gnilnd/gnilnd_cb.c:1659:inline int
      lnet/klnds/gnilnd/gnilnd_cb.c-1660-kgnilnd_auth_rdma_bytes(kgn_device_t *dev, kgn_tx_t *tx)
      --
      lustre/contrib/wireshark/packet-lustre.c-1306-/* @gint col :  the col where we add the information */
      lustre/contrib/wireshark/packet-lustre.c:1307:inline static void display_info_str(proto_item *pi, column_info *cinfo, gint col, const gchar* str)
      lustre/contrib/wireshark/packet-lustre.c-1308-{
      --
      lustre/obdclass/genops.c-1932-/* Takes pointer to payload area */
      lustre/obdclass/genops.c:1933:inline void kuc_free(void *p, int payload_len)
      lustre/obdclass/genops.c-1934-{
      --
      lustre/utils/gss/write_bytes.h-37-
      lustre/utils/gss/write_bytes.h:38:inline static int
      lustre/utils/gss/write_bytes.h-39-write_bytes(char **ptr, const char *end, const void *arg, int arg_len)
      --
      lustre/utils/gss/write_bytes.h-52-
      lustre/utils/gss/write_bytes.h:53:inline static int
      lustre/utils/gss/write_bytes.h-54-write_buffer(char **p, char *end, gss_buffer_desc *arg)
      --
      lustre/utils/gss/write_bytes.h-65-
      lustre/utils/gss/write_bytes.h:66:inline static int
      lustre/utils/gss/write_bytes.h-67-write_oid(char **p, char *end, gss_OID_desc *arg)
      

      These should be converted to 'static inline', 'static', or just given default linkage where appropriate.

            sguminsx Steve Guminski (Inactive)
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: