LU-8776 build: Fix weird inline definitions

This patch removes unnecessary inline keywords from functions
that do not have to be inlined.  It also corrects the ordering
of the keywords in several functions from "inline static" to
"static inline".

Test-Parameters: trivial
Signed-off-by: Steve Guminski <stephenx.guminski@intel.com>
Change-Id: I13dde114a803513b72d6497f42be460c4df06883
Reviewed-on: https://review.whamcloud.com/23979
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <john.hammond@intel.com>
Reviewed-by: Nathaniel Clark <nathaniel.l.clark@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>